# classfication-engine

./: .gitignore  Dockerfile  README.md  claude_consolidated_v1.md  pyproject.toml  requirements.txt
classifier_runtime/: __init__.py
classifier_runtime/models/classification/: __init__.py
classifier_runtime/models/classification/distilbert/: __init__.py  export_model.py  inference_service.py  onnx_model.py  pytorch_model.py  schemas.py  utils.py  verify_parity.py
code_jpeg/: README.md
config/: onnx_inference_config.yaml
docs/: wiki.md
openshift/: configmap.yaml  deployment.yaml  hpa.yaml  route.yaml  service.yaml
presentation/: Phase1_Revised_Technical_Blueprint_15_Slides_v5.pptx  confluence.md  distilbert_onnx_team_presentation_v2.pptx  readme.md
tests/: conftest.py  test_export.py  test_inference_service.py  test_onnx_model.py  test_parity.py  test_pytorch_model.py
